--- a/index.html
+++ b/index.html
@@ -5,10 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../html-css-float-cards/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500&display=swap" rel="stylesheet">
     <title>Float Cards</title>
 </head>
 
 <body>
-   
+   <header>
+    <h1>Meet our team</h1>
+   </header>
+   <!-- /header -->
+   <main class="container">
+    <section>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati voluptatibus consequuntur debitis laboriosam provident corporis, sit quasi! Vel accusamus hic ipsam perferendis? Aut, ipsa. Cumque ducimus nostrum saepe. Aliquam, soluta?
+    </section>
+
+    <section class="team">
+        <div>
+            <img src="../html-css-float-cards/img/male1.png" alt="Marco Bianchi">
+        </div>
+        <div></div>
+        <div></div>
+    </section>
+   </main>
+
+   <!-- /main -->
+
+   <footer></footer>
+   <!-- /footer -->
+
 </body>
 </html>
