--- a/index.html
+++ b/index.html
@@ -11,23 +11,61 @@
     <title>Float Cards</title>
 </head>
 
-<body>
+<body class="debug">
    <header>
     <h1>Meet our team</h1>
    </header>
    <!-- /header -->
+
    <main class="container">
     <section>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati voluptatibus consequuntur debitis laboriosam provident corporis, sit quasi! Vel accusamus hic ipsam perferendis? Aut, ipsa. Cumque ducimus nostrum saepe. Aliquam, soluta?
     </section>
 
     <section class="team">
-        <div>
-            <img src="../html-css-float-cards/img/male1.png" alt="Marco Bianchi">
-        </div>
-        <div></div>
-        <div></div>
+       <div class="guy">
+        <img src="../html-css-float-cards/img/male1.png" alt="">
+        <h3 class="name">Marco Bianchi</h3>
+        <p class="role">Designer</p>
+        <p class="mail">marcobianchi@team.com</p>
+       </div>
+       <div class="guy">
+        <img src="../html-css-float-cards/img/female1.png" alt="">
+        <h3 class="name">Laura Rossi</h3>
+        <p class="role">Front-end Developer</p>
+        <p class="mail">laurarossi@team.com</p>
+       </div>
+       <div class="guy">
+        <img src="../html-css-float-cards/img/male2.png" alt="">
+        <h3 class="name">Giorgio Verdi</h3>
+        <p class="role">Back-end Developer</p>
+        <p class="mail">giorgioverdi@team.com</p>
+       </div> 
     </section>
+
+    <section class="team">
+        <div class="guy">
+            <img src="../html-css-float-cards/img/female2.png" alt="">
+            <h3 class="name">Marta Ipsum</h3>
+            <p class="role">SEO Specialist</p>
+            <p class="mail">martaipsum@team.com</p>
+        </div>
+        <div class="guy">
+            <img src="../html-css-float-cards/img/male3.png" alt="">
+            <h3 class="name">Roberto Lorem</h3>
+            <p class="role">Project Manager</p>
+            <p class="mail">robertolorem@team.com</p>
+ 
+        </div>
+        <div class="guy">
+            <img src="../html-css-float-cards/img/female3.png" alt="">
+            <h3 class="name">Daniela Amet</h3>
+            <p class="role">Analyst</p>
+            <p class="mail">danielaamet@team.com</p>
+ 
+        </div> 
+     </section>
+
    </main>
 
    <!-- /main -->
