--- a/index.html
+++ b/index.html
@@ -1,77 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../html-css-float-cards/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500&display=swap" rel="stylesheet">
     <title>Float Cards</title>
 </head>
 
-<body class="debug">
-   <header>
-    <h1>Meet our team</h1>
-   </header>
-   <!-- /header -->
+<body class="">
+    <header>
+        <h1>Meet our team</h1>
+    </header>
+    <!-- /header -->
 
-   <main class="container">
-    <section>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati voluptatibus consequuntur debitis laboriosam provident corporis, sit quasi! Vel accusamus hic ipsam perferendis? Aut, ipsa. Cumque ducimus nostrum saepe. Aliquam, soluta?
-    </section>
+    <main class="container">
+        <section>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati voluptatibus consequuntur debitis
+            laboriosam provident corporis, sit quasi! Vel accusamus hic ipsam perferendis? Aut, ipsa. Cumque ducimus
+            nostrum saepe. Aliquam, soluta?
+        </section>
 
-    <section class="team">
-       <div class="guy">
-        <img src="../html-css-float-cards/img/male1.png" alt="">
-        <h3 class="name">Marco Bianchi</h3>
-        <p class="role">Designer</p>
-        <p class="mail">marcobianchi@team.com</p>
-       </div>
-       <div class="guy">
-        <img src="../html-css-float-cards/img/female1.png" alt="">
-        <h3 class="name">Laura Rossi</h3>
-        <p class="role">Front-end Developer</p>
-        <p class="mail">laurarossi@team.com</p>
-       </div>
-       <div class="guy">
-        <img src="../html-css-float-cards/img/male2.png" alt="">
-        <h3 class="name">Giorgio Verdi</h3>
-        <p class="role">Back-end Developer</p>
-        <p class="mail">giorgioverdi@team.com</p>
-       </div> 
-    </section>
+        <section class="team clearfix">
+            <div class="card">
+                <img src="../html-css-float-cards/img/male1.png" alt="">
+                <h3 class="name">Marco Bianchi</h3>
+                <p class="role">Designer</p>
+                <p class="mail">marcobianchi@team.com</p>
+            </div>
+            <div class="card">
+                <img src="../html-css-float-cards/img/female1.png" alt="">
+                <h3 class="name">Laura Rossi</h3>
+                <p class="role">Front-end Developer</p>
+                <p class="mail">laurarossi@team.com</p>
+            </div>
+            <div class="card">
+                <img src="../html-css-float-cards/img/male2.png" alt="">
+                <h3 class="name">Giorgio Verdi</h3>
+                <p class="role">Back-end Developer</p>
+                <p class="mail">giorgioverdi@team.com</p>
+            </div>
+            <div class="card">
+                <img src="../html-css-float-cards/img/female2.png" alt="">
+                <h3 class="name">Marta Ipsum</h3>
+                <p class="role">SEO Specialist</p>
+                <p class="mail">martaipsum@team.com</p>
+            </div>
+            <div class="card">
+                <img src="../html-css-float-cards/img/male3.png" alt="">
+                <h3 class="name">Roberto Lorem</h3>
+                <p class="role">Project Manager</p>
+                <p class="mail">robertolorem@team.com</p>
 
-    <section class="team">
-        <div class="guy">
-            <img src="../html-css-float-cards/img/female2.png" alt="">
-            <h3 class="name">Marta Ipsum</h3>
-            <p class="role">SEO Specialist</p>
-            <p class="mail">martaipsum@team.com</p>
-        </div>
-        <div class="guy">
-            <img src="../html-css-float-cards/img/male3.png" alt="">
-            <h3 class="name">Roberto Lorem</h3>
-            <p class="role">Project Manager</p>
-            <p class="mail">robertolorem@team.com</p>
- 
-        </div>
-        <div class="guy">
-            <img src="../html-css-float-cards/img/female3.png" alt="">
-            <h3 class="name">Daniela Amet</h3>
-            <p class="role">Analyst</p>
-            <p class="mail">danielaamet@team.com</p>
- 
-        </div> 
-     </section>
+            </div>
+            <div class="card">
+                <img src="../html-css-float-cards/img/female3.png" alt="">
+                <h3 class="name">Daniela Amet</h3>
+                <p class="role">Analyst</p>
+                <p class="mail">danielaamet@team.com</p>
 
-   </main>
+            </div>
+        </section>
 
-   <!-- /main -->
+    </main>
 
-   <footer></footer>
-   <!-- /footer -->
+    <!-- /main -->
+
+    <footer></footer>
+    <!-- /footer -->
 
 </body>
+
 </html>
