--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 
     <!-- /main -->
 
-    <footer></footer>
+    <footer>
+        Copyright &#169; Roberto Nesta
+    </footer>
     <!-- /footer -->
 
 </body>
